--- a/content/posts/life/20220521_1.md
+++ b/content/posts/life/20220521_1.md
@@ -17,7 +17,7 @@ comments: true
 showToc: false # 显示目录
 TocOpen: false # 自动展开目录
 hidemeta: false # 是否隐藏文章的元信息，如发布日期、作者等
-disableShare: false 
+disableShare: true 
 showbreadcrumbs: false 
 cover:
     image: ""
