--- a/content/posts/life/20220525_1.md
+++ b/content/posts/life/20220525_1.md
@@ -44,6 +44,6 @@ cover:
 &ensp;&ensp;&ensp;&ensp;再就是淋浴间，那个倾斜角度属实难绷，水堆到另一边完全流不掉，这里是南方啊！蚊子快乐屋……
 ![开VPN可能导致图片无法访问哦~](https://i.imgtg.com/2022/05/26/hE36K.jpg)
 <br><br>
-虽然嘴上有各种吐槽能接受，但这些问题忍一忍也不是不能接受。可是泡面为什么只有我最讨厌的红烧牛肉？😭
+虽然嘴上有各种吐槽，但这些问题忍一忍也不是不能接受。可是泡面为什么只有我最讨厌的红烧牛肉？😭
 
 
