--- a/content/posts/life/20220521_1.md
+++ b/content/posts/life/20220521_1.md
@@ -2,7 +2,7 @@
 title: "灯光与草地演出"
 date: 2022-05-21T23:55:04+08:00
 lastmod: 2022-05-21T23:55:04+08:00
-author: ["yjlintp"]
+author: ["Inco"]
 tags:
 - 生活
 - 闪光
