--- a/content/posts/life/20220525.md
+++ b/content/posts/life/20220525.md
@@ -2,7 +2,7 @@
 title: "入住隔离点（你管这叫隔离酒店？）"
 date: 2022-05-26T00:36:14+08:00
 lastmod: 2022-05-26T00:36:14+08:00
-author: ["yjlintp"]
+author: ["Inco"]
 tags:
 - 生活
 - 奇遇
